--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -59,7 +59,7 @@
             <form action="/search_professional" method="GET" style="display: inline;">
                 <button type="submit" style="background: none; border: none; padding: 0; cursor: pointer; color: inherit;">Search</button>
             </form>
-            <a href="#">Summary</a>
+            <a href="{{ url_for('admin_summary') }}">Summary</a>
             <a href="/logout" id="logout">Logout</a>
         </div>
     </div>
