--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomEase</title>
+    <title>HomEase User</title>
     <link rel="stylesheet" href="/static/styles/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
 </head>
 <body>
     <div class="my_container">
@@ -17,30 +16,28 @@
               <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{url_for('user_dashboard')}}">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('user_dashboard') }}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('search_professional')}}">Search</a>
+                    <a class="nav-link" href="{{ url_for('search_users') }}">Search</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Summary</a>
+                    <a class="nav-link" href="{{ url_for('user_summary', user_id=user_info.id) }}">Summary</a>
                   </li>
                   <li class="nav-item">
-                    <a  href="/logout" class="nav-link" style="color: red;">Logout</a>
+                    <a href="/logout" class="nav-link" style="color: red;">Logout</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link button" href="#">My Profile</a>
+                    <a class="nav-link button" href="{{ url_for('user_profile') }}">My Profile</a>
                   </li>
                 </ul>
-                <!-- <span class="navbar-text">
-                  Welcome {{name}}!
-                </span> -->
               </div>
             </div>
           </nav>
-          {%block content%}
-          <!-- dynamic  -->
-          {%endblock%}
+          {% block content %}
+          <!-- dynamic content will be injected here -->
+          {% endblock %}
         </div>
     </div>
 </body>
+</html>
