--- a/templates/user_search.html
+++ b/templates/user_search.html
@@ -1,4 +1,4 @@
-{% extends "user_layout.html" %}  
+{% extends "user_layout.html" %}
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -125,7 +125,7 @@
         <!-- Search Results -->
         <div class="section-title">Search Results</div>
         {% if search_history %}
-        <div class="results-list">
+        <div class="package-list">
             <table>
                 <thead>
                     <tr>
