--- a/templates/user_dash.html
+++ b/templates/user_dash.html
@@ -1,7 +1,7 @@
 {% extends "user_layout.html" %}
 {% block content %}
 <html>
-    <p class="trs" style="text-align: center; font-size: 30px;">Our top-rated services</p>
+    <p class="trs" style="text-align: center; font-size: 30px;">Top-rated services</p>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -33,6 +33,8 @@
             </div>
         </div>
 
+
+
         <div class="container mt-5">
             <h2 style="text-align: center;">Service History</h2>
             <table class="table table-bordered table-striped mt-3">
@@ -58,14 +60,14 @@
                         <td>{{ service_req.date_of_req.strftime('%Y-%m-%d %H:%M') }}</td>
                         <td>
                             {% if service_req.status == 'pending' %}
-                            <span class="badge badge-warning">Pending</span>
-                            {% elif service_req.status == 'accepted' %}
-                            <span class="badge badge-success">Accepted</span>
-                            {% elif service_req.status == 'rejected' %}
-                            <span class="badge badge-danger">Rejected</span>
-                            {% else %}
-                            {{ service_req.status }}
-                            {% endif %}
+                        <span class="badge badge-orange" style="background-color: #FFA07A; color: #fff;">Pending</span>
+                        {% elif service_req.status == 'accepted' %}
+                        <span class="badge badge-green" style="background-color: #34C759; color: #fff;">Accepted</span>
+                        {% elif service_req.status == 'rejected' %}
+                        <span class="badge badge-red" style="background-color: #FF3737; color: #fff;">Rejected</span>
+                        {% else %}
+                        {{ service_req.status }}
+                        {% endif %}
                         </td>
                         <td> 
                             {% if service_req.status == 'accepted' %}
